# aps-templates

./: .gitignore  APS_REAGENT_TABLES_REPORT.md  Cargo.toml  README.md
src/: asset_models.rs  lib.rs  reference_namespaces.rs
src/asset_models/: bead.rs  containers.rs  instruments.rs  markers.rs  panels.rs  photographs.rs  ppe.rs  reagent_models.rs
src/asset_models/containers/: bottles.rs  boxes.rs  conical_centrifugal_tubes.rs  racks.rs  safelock_tubes.rs  vial_caps.rs  vial_inserts.rs  vials.rs  wrappers.rs
src/asset_models/instruments/: ball_mill_machine.rs  centrifuge.rs  freeze_dryer.rs  freezer.rs  phone.rs  pipette_tips.rs  pipettes.rs  volume_measuring_device.rs  weighing_scale.rs
src/asset_models/reagent_models/: distilled_water.rs  ethanol.rs  formic_acid.rs  liquid_nitrogen.rs  methanol.rs
src/asset_models/tools/: cutting_tools.rs
